<resources>
    <string name="app_name">Shopyy</string>
    <string name="app_name2">SHOPYY</string>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="email">Email:</string>
    <string name="cancel">Cancel</string>

    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="powered_by">powered by</string>
    <string name="android_studio">Android Studio</string>
    <string name="okay">Okay</string>
    <string name="finish">Finish</string>
    <string name="store_name">Store Name</string>


    <string name="web_browser">Web Browser</string>

    //-----------Navigation drawer-----------
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="navigation">Navigation Drawer</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard_new">DashboardNew</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_item">Add Item</string>
    <string name="menu_history">History</string>

    <string name="linklabel">Shopyy Source Code is Open Source</string>
    <string name="hyper">Repository: <a href="https://github.com/SinOfGuardian/Shopyy.git">Github</a> </string>
    <string name="required">Required</string>
    <string name="item">Item</string>
    <string name="item_name">Item Name</string>
    <string name="barcode">Barcode</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="del">DEL</string>
    <string name="save">SAVE</string>
    <string name="plus_sign">+</string>
    <string name="add">ADD</string>
    <string name="back">back</string>
    <string name="edit">Edit</string>
    <string name="john_lloyd">John Lloyd Gabriel</string>
    <string name="lloyd_email">asteloid15@gmail.com</string>
    <string name="leo_marc">Leo Marc Boco</string>
    <string name="leo_email">marbok836@gmail.com</string>
    <string name="valenzuela_nathaniel">Valenzuela, Nathaniel Rosell.</string>
    <string name="nath_email">kienielvalenzuela05@gmail.com</string>
    <string name="jerreme_detorres">Jerreme B. De Torres</string>
    <string name="jerreme_email">jerremedetorres029@gmail.com</string>
    <string name="jayvie_email">balilijayvie201@gmail.com</string>
    <string name="jayvie_balili">Jayvie M. Balili</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="about_the_app">Shopyy is an offline app that are designed to managed stocks and items. It is developed to manage goods in a small shop or home inventory storage. Shopyy helps to keep track of your stock of any kind of items.</string>
    <string name="about">About the app</string>
    <string name="app_version">Version 1.1.2</string>

    <string name="baron">Baron M. Muyano</string>
    <string name="baron_email">exilemuyano@gmail.com</string>
    <string name="carlo">John Carlo Rivera</string>
    <string name="carlo_email">jidirivera022118@gmail.com</string>
    <string name="lariosa">John Dominick Lariosa</string>
    <string name="lariosa_email">lariosa.johndominick@gmail.com</string>


</resources>