<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="@string/app_name2"
            android:textColor="@color/primary_col"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signin1"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="@string/signin"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="/"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/register1"
                android:layout_width="100dp"
                android:layout_height="56dp"
                android:gravity="center"
                android:onClick="signupBtn_clicked"
                android:text="@string/signup"
                android:textColor="@color/gray1"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/login_edittext"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="25dp"
                android:paddingTop="20dp"

                android:paddingEnd="25dp"
                android:paddingBottom="20dp"
                android:textColor="@color/text_col"
                android:textSize="16sp"
                android:textStyle="bold"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/login_edittext"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="25dp"
                android:paddingTop="20dp"

                android:paddingEnd="25dp"
                android:paddingBottom="20dp"
                android:textColor="@color/text_col"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextFields"
                android:importantForAutofill="no" />

            <Button
                style="@style/Widget.AppCompat.Button"
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"

                android:onClick="loginBtn_clicked"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="UsingOnClickInXml"
                android:background="@drawable/login_button"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>